--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Etch-a-Sketch</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Pixelify+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  Hello world
+  <h1 id="title">Etch-a-sketch</h1>
+
+  <div id="container"></div>
+  
   <script src="script.js"></script>
 </body>
 
