--- a/index.html
+++ b/index.html
@@ -15,9 +15,25 @@
 <body>
   <h1 id="title">Etch-a-sketch</h1>
 
-  <div id="container"></div>
+  <!-- main container -->
+  <div id="container">
+    <!-- holds grid -->
+    <div id="sketch"> </div>
+
+    <!-- buttons for diff options -->
+    <div id="buttons">
+        <button id="clear">Clear</button>
+        <button id="rgb">RGB Mode</button>
+        <button id="picker">Pick color</button>
+    </div>
+  </div>
   
   <script src="script.js"></script>
 </body>
+  
+
+<footer>
+  <p>Project for <a href="https://www.theodinproject.com/">theodinproject</a> by <a href="https://github.com/jamiemetcalfe18">jamiemetcalfe18</a>!</p>
+</footer>
 
 </html>
